--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,10 @@ petgraph = { version = "0.6.5", features = ["serde-1"] }
 bytes = "1"
 url = "2.5.4"
 serde_qs = "0.13.0"
+log = "0.4"
+env_logger = "0.11.6"
+thiserror = "2.0.9"
+tower-http = { version = "0.6.1", features = ["trace"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+base64 = "0.22.1"
